<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardUseCompatPadding="true"
    android:backgroundTint="@color/gray"
    android:background="@drawable/roundcorners"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/roundcorners"
        android:backgroundTint="@color/blue_black"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/patient_shapableImageView"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/doctor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/circular">


        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/patientName_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_14ssp"
            android:fontFamily="@font/bevietnamproextrabold"
            android:textStyle="bold"
            android:text="@string/mostafa_badran"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toEndOf="@+id/patient_shapableImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meeting_state_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/bevietnamproextrabold"
            android:text="@string/finished"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/meeting_notes_expandebletxtView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14sdp"
            android:text="@string/_11_00_pm_12_00pm"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/meeting_state_txt"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/type_Textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/meeting2"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/patient_shapableImageView"
            app:layout_constraintTop_toBottomOf="@+id/patientName_TextView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/_5sdp"
            android:layout_height="@dimen/_5sdp"
            android:background="#CE1E1E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/meeting_state_txt"
            app:shapeAppearance="@style/circular"
            android:layout_marginBottom="@dimen/_13sdp"
            android:layout_marginStart="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/LastSession_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20ssp"
            android:fontFamily="@font/bevietnamprobold"
            android:text="Last Session :"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_shapableImageView" />


        <io.github.glailton.expandabletextview.ExpandableTextView
            android:id="@+id/meeting_notes_expandebletxtView"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_txtview"
            android:fontFamily="@font/bevietnamprobold"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:text="-Therapist’s observations, hypotheses, feelings, or   thoughts about the session \n -Do not include information or data on a patient’s medical history, treatment plan, or diagnoses \n -Document insights on patient and therapy Inform treatment play"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LastSession_txtView"
            app:isExpanded="false"
            app:readLessText="See Less"
            app:collapsedLines="7"
            android:paddingBottom="@dimen/_20sdp"
            app:readMoreText="See more"
            app:ellipsizeTextColor="@color/littleBlue"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>